--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,8 @@
   "name": "news-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
